--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^8.8.0",
     "serialize-error": "^11.0.3",
     "tiny-invariant": "^1.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
