feat: remove firebase functions as it has minimal support for ts

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ FB_API_KEY=
 # SERVICE ACCOUNT FOR FIREBASE FUNCTION RUNTIME
 SERVICE_ACCOUNT_CLIENT_EMAIL=
 SERVICE_ACCOUNT_PRIVATE_KEY=
+
+# MONGO CONFIG
+DATABASE_URL=
