--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "simple-tinder-like",
   "version": "1.0.0",
-  "main": "index.js",
+  "engines": {
+    "node": "20"
+  },
+  "type": "module",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && tsc-alias",
+    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"node --experimental-specifier-resolution=node lib/index.js\"",
+    "start": "npm run build && node --experimental-specifier-resolution=node lib/index.js",
+    "deploy": "firebase deploy --only functions"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
+    "joi": "^17.13.3",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.0",
     "serialize-error": "^11.0.3",
-    "tiny-invariant": "^1.3.3"
+    "tiny-invariant": "^1.3.3",
+    "tsc-alias": "^1.8.10"
   },
   "devDependencies": {
-    "prettier": "^3.3.3"
+    "concurrently": "^9.1.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   }
 }
