--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"node --experimental-specifier-resolution=node lib/index.js\"",
+    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"nodemon --experimental-specifier-resolution=node --watch ./lib ./lib/index.js\"",
     "start": "npm run build && node --experimental-specifier-resolution=node lib/index.js",
     "deploy": "firebase deploy --only functions"
   },
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   }
